issue #5 - update title and icon  * update title and icon  * change Syrup to Sauce  * update usePriceCakeBusd to usePriceWagyuBusd

--- a/public/locales/en-US.json
+++ b/public/locales/en-US.json
@@ -827,5 +827,6 @@
   "New Wagyu/block": "New Wagyu/block",
   "WAGYU to Harvest": "WAGYU to Harvest",
   "WAGYU in Wallet": "WAGYU in Wallet",
-  "WAGYU to Collect": "WAGYU to Collect"
+  "WAGYU to Collect": "WAGYU to Collect",
+  "Sauce Pools": "Sauce Pools"
 }
