--- a/public/locales/fr-FR.json
+++ b/public/locales/fr-FR.json
@@ -827,5 +827,6 @@
   "New Wagyu/block": "Quantité de WAGYU/bloc",
   "WAGYU to Harvest": "WAGYU à récupérer",
   "WAGYU in Wallet": "WAGYU dans votre wallet",
-  "WAGYU to Collect": "WAGYU à récupérer"
+  "WAGYU to Collect": "WAGYU à récupérer",
+  "Sauce Pools": "Pools de Sauce"
 }
