issue #9 - update the images on the lottery winning card   * add a letter button name

--- a/public/locales/en-US.json
+++ b/public/locales/en-US.json
@@ -828,5 +828,6 @@
   "WAGYU to Harvest": "WAGYU to Harvest",
   "WAGYU in Wallet": "WAGYU in Wallet",
   "WAGYU to Collect": "WAGYU to Collect",
-  "Sauce Pools": "Sauce Pools"
+  "Sauce Pools": "Sauce Pools",
+  "Approve WAGYU": "Approve WAGYU"
 }
