--- a/public/locales/fr-FR.json
+++ b/public/locales/fr-FR.json
@@ -828,5 +828,6 @@
   "WAGYU to Harvest": "WAGYU à récupérer",
   "WAGYU in Wallet": "WAGYU dans votre wallet",
   "WAGYU to Collect": "WAGYU à récupérer",
-  "Sauce Pools": "Pools de Sauce"
+  "Sauce Pools": "Pools de Sauce",
+  "Approve WAGYU": "Autoriser WAGYU"
 }
